
<resources>
    <string name="app_name">AcClient</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="codetem">
        "import java.util.*;\n" +
        "import java.math.*;\n" +
        "import java.io.*;\n" +
        "public class Main {\n" +
        "\n" +
        "    public static void main(String []args)\n" +
        "    {\n" +
        "        String sa,sb;\n" +
        "        Scanner cin=new Scanner(System.in);\n" +
        "        while(cin.hasNext())\n" +
        "        {\n" +
        "            sa=cin.next();\n" +
        "            sb=cin.next();\n" +
        "            BigInteger x=new BigInteger(sa);\n" +
        "            BigInteger y=new BigInteger(sb);\n" +
        "            System.out.println(x.add(y).toString());\n" +
        "        }\n" +
        "    }\n" +
        "\n" +
        "}"
    </string>
    <string name="scroll_behavior">thereisnospon.acclient.widget.ScrollToTopBehavior</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="cancel">Cancel</string>
    <string name="discuss">Discuss</string>

    <string name="loading">Loading…</string>
    <string name="saving">Saving…</string>
   
   
    <string name="Go">Go</string>

    <string name="warm_tips_title">Tips</string>
    <string name="warm_tips_message">Questions and Problems on 11. page are relative simple. For your first time feeling with us, it\'s better to try these.</string>


    <string name="hello_hint_username">username</string>
    <string name="hello_hint_password">password</string>
    <string name="hello_btn_login">Login</string>
    <string name="hello_btn_register">Register</string>
    <string name="hello_check_password">check password</string>
    <string name="hello_check_code">check code</string>
    <string name="hello_email_address">email</string>
    <string name="hello_login_unsuccessfully">Login unsuccessfully.</string>
    <string name="hello_remember_password">Remember password</string>
    <string name="hello_register_successfully">Well, you\'ve registered successfully: </string>
    <string name="hello_return_to_login">Return to login.</string>
    <string name="hello_no_empty_username">Username is required.</string>
    <string name="hello_wrong_email">Wrong email</string>
    <string name="hello_no_empty_password">Password is required.</string>
    <string name="hello_password_not_equal">Passwords are not equal.</string>
    <string name="hello_password_short">More than 7 characters.</string>
    <string name="hello_register_unsuccessfully">Registered unsuccessfully.</string>

    <string name="navi_problem_list">Problem list</string>
    <string name="navi_settings">Settings</string>
    <string name="navi_user_list">User list</string>
    <string name="navi_about">About</string>
    <string name="navi_topic_discuss">Problem discuss</string>
    <string name="navi_notice">Notice</string>
    <string name="navi_register">Register</string>
    <string name="navi_search">Search</string>
    <string name="navi_logout">Logout</string>
    <string name="navi_personal">Personal</string>
    <string name="navi_other">Other</string>
    <string name="navi_share">Share</string>
    <string name="navi_by_page">Find problem by page</string>
    <string name="navi_by_id">Find problem by id</string>
    <string name="navi_answer">Answer</string>
    <string name="navi_software_licenses">Software licenses</string>

    <string name="search_by_problem_id">Find problem by id: </string>
    <string name="search_problem_by_page">Find problem(s) at page:</string>
    <string name="search_by_wrong_page">Wrong page number</string>
    <string name="search_by_wrong_id">Wrong Id</string>
    <string name="search_pressback_return">One more press on back and return to desktop.</string>

    <string name="share_app_subject">This APP is useful, I want to share with you.</string>
    <string name="share_app_text">You can use this app to solve programming problems and win points.</string>
    <string name="share_app">Share</string>

    <string name="software_licenses_count">Total %1$d licenses for %2$d libraries and software.</string>


    <string name="info_copy_code">code has pasted to clipboard </string>
    <string name="menu_copy_code">Copy</string>



    <string name="settings_app_theme">App theme</string>
    <string name="settings_code_highlight">Code highlight</string>
    <string name="settings_default_compiler">Default compiler</string>
    <string name="settings_other">Other</string>
    <string name="settings_double_click_to_exit">Double click to exit app.</string>
    <string name="settings_exit_info">Info before exiting</string>
    <string name="settings_about">About</string>
    <string name="settings_software_licenses">Software licenses</string>


    <string name="about_content">
         AcClent 测试版
    </string>
</resources>
