<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/settings_app_theme">
        <ListPreference
            android:key="theme_pref"
            android:title="@string/settings_code_highlight"
            android:summary="AndroidStudio"
            android:entries="@array/them_names"
            android:defaultValue="@string/theme_value_def"
            android:entryValues="@array/them_values"/>

        <!--<CheckBoxPreference-->
            <!--android:defaultValue="false"-->
            <!--android:key="skins_pref"-->
            <!--android:title="夜间模式"></CheckBoxPreference>-->

        <ListPreference
            android:key="compiler_pref"
            android:title="@string/settings_default_compiler"
            android:summary="G++"
            android:entries="@array/code_languages"
            android:defaultValue="@string/theme_value_def"
            android:entryValues="@array/code_values"/>




</PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_other">
        <SwitchPreference
            android:summary="@string/settings_double_click_to_exit"
            android:defaultValue="true"
            android:key="exitcon_pref"
            android:title="@string/settings_exit_info"/>


        <Preference
            android:key="pref_about"
            android:title="@string/settings_about"/>

        <Preference
            android:key="pref_software_licenses"
            android:title="@string/settings_software_licenses"/>

    </PreferenceCategory>
</PreferenceScreen>